--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
-    color: #585858;
+    color: #333;
 }
 
 header {
@@ -39,6 +39,7 @@ nav ul li {
 nav ul li a {
     color: #fff;
     text-decoration: none;
+    align-self: center;
 }
 
 .hamburger {
