--- a/styles/base.css
+++ b/styles/base.css
@@ -1,4 +1,3 @@
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
@@ -26,25 +25,49 @@ nav ul {
     list-style-type: none;
     padding: 0;
     text-align: center;
+    background: #34495e;
 }
 
 nav ul li {
-    display: block;
+    display: inline-block;
     padding: 10px;
-    background: #34495e;
-    margin: 2px 0;
 }
 
 nav ul li a {
     text-decoration: none;
     color: white;
     font-weight: bold;
-    display: block;
+    padding: 10px 15px;
+    border-radius: 5px;
 }
 
 nav ul li a.active {
-    background: #004d40; /* Darker background color for better contrast */
-    color: #ffffff; /* White text color for better contrast */
+    background: #004d40;
+    color: #ffffff;
+}
+
+.hero {
+    position: relative;
+    display: block;
+}
+
+.hero img {
+    width: 100%;
+    height: auto;
+}
+
+.overlay {
+    position: absolute;
+    bottom: 10px;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: rgba(0, 0, 0, 0.6);
+    color: white;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 1.2em;
+    text-align: center;
+    width: max-content;
 }
 
 main {
@@ -59,6 +82,14 @@ main {
     margin: 10px 0;
     border-radius: 8px;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+iframe {
+    width: 100%;
+    height: 300px;
+    border: 0;
+    display: block;
+    margin: 0 auto;
 }
 
 footer {
