--- a/styles/larger.css
+++ b/styles/larger.css
@@ -2,18 +2,7 @@
     nav ul {
         display: flex;
         justify-content: center;
-        background: #2c3e50;
         padding: 10px 0;
-    }
-
-    nav ul li {
-        display: inline;
-        padding: 10px 20px;
-    }
-
-    nav ul li a {
-        padding: 10px 15px;
-        border-radius: 5px;
     }
 
     main {
@@ -25,5 +14,9 @@
 
     .card {
         text-align: left;
+    }
+    
+    iframe {
+        height: 400px;
     }
 }
