--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -104,6 +104,15 @@ main .centered-content {
     text-align: center;
 }
 
+iframe {
+    width: 100%;
+    height: 300px;
+    border: 0;
+    display: block;
+    margin: 0 auto;
+}
+
+
 footer {
     grid-column: 1 / -1;
     background-color: #2c3e50;
